--- a/index.html
+++ b/index.html
@@ -11,22 +11,48 @@
             box-sizing: border-box;
         }
 
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f0f0;
             font-family: Arial, sans-serif;
+            background: linear-gradient(
+                -45deg,
+                #FF6B6B,
+                #4ECDC4,
+                #45B7D1,
+                #96CEB4,
+                #FFEEAD,
+                #FFD93D,
+                #FF8C94
+            );
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
         }
 
         #game-container {
             position: relative;
             width: 800px;
             height: 400px;
-            background-color: #fff;
-            border: 2px solid #333;
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 2px solid rgba(51, 51, 51, 0.5);
+            border-radius: 15px;
             overflow: hidden;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(5px);
         }
 
         #player {
